# ocs2

./: .buildinfo  .gitattributes  .gitignore  CMakeLists.txt  LICENCE.txt  README.md  faq.html  from_urdf_to_ocp.html  genindex.html  getting-started.html  index.html  installation.html  installation.md  intro.html  jenkins-pipeline  mpcnet.html  objects.inv  ocs2_hyq_traj.bag  optimal_control_modules.html  overview.html  package.xml  profiling.html  robotic_examples.html  search.html  searchindex.js
ocs2/: CMakeLists.txt  package.xml
ocs2_anymal/: CMakeLists.txt  package.xml
ocs2_anymal_commands/: package.xml
ocs2_anymal_commands/config/: targetCommand.info
ocs2_anymal_commands/src/: AnymalTargetPoseCommand.cpp
ocs2_anymal_description/: CMakeLists.txt  package.xml
ocs2_anymal_description/kindsl/: ANYmal.dtdsl  ANYmal.kindsl
ocs2_anymal_description/launch/: load.launch  urdf2robcogen.launch
ocs2_anymal_loopshaping_mpc/: CMakeLists.txt  package.xml
ocs2_anymal_loopshaping_mpc/launch/: bear.launch  cerberus.launch  chimera.launch  chip.launch  croc.launch  dingo.launch  donkey.launch  mpc.launch  perceptive_mpc_demo.launch  sqpmpc.launch  wheels.launch  wheels_chimera.launch
ocs2_anymal_loopshaping_mpc/src/: AnymalLoopshapingDummyMrt.cpp  AnymalLoopshapingInterface.cpp  AnymalLoopshapingMpcNode.cpp  AnymalLoopshapingSqpMpcNode.cpp  PerceptiveMpcDemo.cpp
ocs2_anymal_loopshaping_mpc/test/: testMotionTracking.cpp  testProblemFormulation.cpp  testSensitivity.cpp
ocs2_anymal_models/: CMakeLists.txt  README.md  package.xml
ocs2_anymal_models/launch/: load_urdf.launch  urdf2robcogen.launch
ocs2_anymal_models/src/: AnymalKinematics.cpp  AnymalModels.cpp  FrameDeclaration.cpp  QuadrupedCom.cpp  QuadrupedInverseKinematics.cpp  QuadrupedKinematics.cpp  QuadrupedPinocchioMapping.cpp
ocs2_anymal_models/test/: TestAnymalBear.cpp  TestAnymalCamel.cpp  TestAnymalCerberus.cpp  TestAnymalChimera.cpp  TestAnymalChip.cpp  TestAnymalCroc.cpp  TestAnymalPinocchio.cpp  TestAnymalSwitchedModel.h  TestAnymalWheels.cpp  TestAnymalWheelsChimera.cpp  TestDynamicsHelpers.cpp  TestFrameDeclaration.cpp  TestInverseKinematics.cpp  TestQuadrupedPinocchioCom.cpp  TestQuadrupedPinocchioKinematics.cpp  TestRobcogenHelpers.cpp  link.urdf
ocs2_anymal_models/urdf/: anymal_bear.urdf  anymal_camel_rsl.urdf  anymal_cerberus_rsl.urdf
ocs2_anymal_motion_tracking/: CMakeLists.txt  package.xml
ocs2_anymal_motion_tracking/config/: config.rviz
ocs2_anymal_motion_tracking/launch/: visualize.launch
ocs2_anymal_motion_tracking/src/: CartesianMotionTrackingCost.cpp  ModelParentSkeleton.cpp  MotionTracking.cpp  VisualizeTargetsNode.cpp
ocs2_anymal_motion_tracking/test/: testModelParentSkeleton.cpp
ocs2_anymal_mpc/: CMakeLists.txt  README  TODO  package.xml  setup.py
ocs2_anymal_mpc/config/: visualize_foothold_selection.rviz
ocs2_anymal_mpc/launch/: bear.launch  camel.launch  cerberus.launch  chimera.launch  chip.launch  croc.launch  mpc.launch  sqpmpc.launch  test_terrain.launch  wheels.launch  wheels_chimera.launch
ocs2_anymal_mpc/src/: AnymalDummyMRT.cpp  AnymalInterface.cpp  AnymalMpcNode.cpp  AnymalMpcNodeSqp.cpp  AnymalPyBindings.cpp  AnymalWheelsDummyVisualization.cpp  pyBindModule.cpp  testTerrainNode.cpp  visualizeFootholdSelection.cpp
ocs2_anymal_mpc/test/: testProblemFormulation.cpp  test_pyBindings.py
ocs2_anymal_raisim/: CMakeLists.txt  package.xml
ocs2_anymal_raisim/config/: raisim_rollout.info
ocs2_anymal_raisim/launch/: bear.launch  camel.launch  cerberus.launch  chimera.launch  croc.launch  raisim_mpc.launch  raisim_urdf.launch
ocs2_anymal_raisim/src/: AnymalRaisimConversions.cpp  AnymalRaisimDummy.cpp  AnymalRaisimDummyNode.cpp
ocs2_anymal_raisim/test/: testAnymalRaisimConversions.cpp
ocs2_anymal_visualization/: CMakeLists.txt  package.xml
ocs2_anymal_visualization/config/: config.rviz
ocs2_anymal_visualization/launch/: visualization.launch
ocs2_anymal_visualization/src/: AnymalUrdfVisualization.cpp
ocs2_comm_interfaces/: CMakeLists.txt  package.xml
ocs2_comm_interfaces/doc/: DoxygenLayout.xml  MainPage.dox  ocs2_comm_interfaces_doxyfile.in
ocs2_comm_interfaces/src/: lintTarget.cpp
ocs2_comm_interfaces/test/: test_custom_callback_queue.cpp  test_ocs2_interfaces_mpc.cpp
ocs2_core/: CMakeLists.txt  package.xml
ocs2_core/cmake/: ocs2_cxx_flags.cmake
ocs2_core/doc/: DoxygenLayout.xml  MainPage.dox  ocs2_core_doxyfile.in
ocs2_core/misc/: BugReportTest.cpp
ocs2_core/src/: BugReportTest.cpp  Types.cpp  cppadcg_linux.cpp  dynamic_linux.cpp  eigen_dynamic_linux.cpp  lintTarget.cpp  testCppADCG_cost.cpp
ocs2_core/test/: IntegrationTest.cpp  testCppADCG.cpp  testCppADCG_linux.cpp  testFindIndex.cpp  testInterpolation.cpp  testLogicRulesMachine.cpp  testPrecomputation.cpp  testSystemDynamicsLinearizer.cpp  testTransferfunctionBase.cpp  testTypes.cpp
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_ddp/ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_ddp/ocs2_ddp_base/: CMakeLists.txt  package.xml
ocs2_ddp/ocs2_ilqr/: CMakeLists.txt  package.xml
ocs2_ddp/ocs2_slq/: CMakeLists.txt  package.xml
ocs2_ddp/src/: ContinuousTimeLqr.cpp  ContinuousTimeRiccatiEquations.cpp  DDP_DataCollector.cpp  DDP_HelperFunctions.cpp  DDP_Settings.cpp  DiscreteTimeRiccatiEquations.cpp  GaussNewtonDDP.cpp  HessianCorrection.cpp  ILQR.cpp  RiccatiModification.cpp  SLQ.cpp  SequentialRiccatiEquationsNormalized.cpp  StrategySettings.cpp  lintTarget.cpp
ocs2_ddp/test/: CircularKinematicsTest.cpp  CorrectnessConstrainedTest.cpp  CorrectnessTest.cpp  CorrectnessUnconstrainedTest.cpp  Exp0Test.cpp  Exp1Test.cpp  HybridSlqTest.cpp  RiccatiTest.cpp  circular_kinematics_ilqr_test.cpp  circular_kinematics_slq_test.cpp  ddpCircularKinematicsTest.cpp  ddpCorrectnessTest.cpp  ddpExp0Test.cpp  ddpExp1Test.cpp  exp0_ilqr_test.cpp  exp0_slq_test.cpp  exp1_ilqr_test.cpp  (+9 more)
ocs2_doc/: .gitignore  CMakeLists.txt  Dockerfile  package.xml  readme.md
ocs2_frank_wolfe/: CMakeLists.txt  package.xml
ocs2_ipm/: CMakeLists.txt  package.xml
ocs2_mpc/: CMakeLists.txt  package.xml
(+4337 files in other folders)
