<?xml version="1.0"?>
<package format="2">
  <name>ocs2_anymal_switched_model</name>
  <version>0.0.1</version>
  <description>The ocs2_anymal_switched_model package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="farbod@todo.todo">farbod</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- <url type="website">http://wiki.ros.org/c_anymal_switched_model</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>ocs2_switched_model_interface</depend>
  <depend>ocs2_robotic_examples</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
