<?xml version="1.0"?>
<package format="2">
  <name>ocs2_anymal_interface</name>
  <version>0.0.0</version>
  <description>The ocs2_anymal_interface package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>ocs2_anymal_switched_model</depend>
  <depend>ocs2_quadruped_interface</depend>

</package>
