<?xml version="1.0"?>
<package format="2">
  <name>ocs2_switched_model_interface</name>
  <version>0.0.0</version>
  <description>The ocs2_switched_model_interface package</description>

  <maintainer email="farbod@todo.ch">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>roscpp</depend>

</package>
