<package>
  <name>ocs2</name>
  <version>1.0.0</version>
  <description>
    OCS2
  </description>
  <maintainer email="farbodf@ethz.ch">Farbod Farshidian</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
   <export>
   	  <metapackage />
   </export>
</package>
