<package>
  <name>ocs2</name>
  <version>1.0.0</version>
  <description>
    OCS2
  </description>
  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ocs2_core</run_depend>
  <run_depend>ocs2_ddp</run_depend>
  <run_depend>ocs2_ocs2</run_depend>
  <run_depend>ocs2_frank_wolfe</run_depend>
  <run_depend>ocs2_mpc</run_depend>
  <run_depend>ocs2_comm_interfaces</run_depend>
  
   <export>
   	  <metapackage />
   </export>
</package>
