<?xml version="1.0"?>
<package format="2">
  <name>ocs2_anymal</name>
  <version>0.0.0</version>
  <description>The ocs2_anymal metapackage</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ocs2_anymal_mpc</exec_depend>
  <exec_depend>ocs2_anymal_loopshaping_mpc</exec_depend>

  <export>
    <metapackage />
  </export>

</package>
