<?xml version="1.0"?>
<package format="2">
  <name>ocs2_anymal_commands</name>
  <version>0.0.0</version>
  <description>The ocs2_anymal_commands package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>ocs2_comm_interfaces</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_switched_model_interface</depend>

</package>
