<?xml version="1.0"?>
<package format="2">
  <name>ocs2_anymal_description</name>
  <version>0.0.1</version>
  <description>The ocs2_anymal_description package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>anymal_bear_rsl_description</exec_depend>

</package>
