<?xml version="1.0"?>
<package format="2">
  <name>ocs2_anymal_visualization</name>
  <version>0.0.1</version>
  <description>The ocs2_anymal_visualization package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <depend>xpp_vis</depend>
  <exec_depend>ocs2_anymal_description</exec_depend>

</package>
